<resources>
    <string name="app_name">Shop Safe</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="name_hint">Full Name</string>
    <string name="address_hint">Your Residential Address</string>
    <string name="age_hint">Your age</string>
    <string name="health_hint">Health Condition (If any)</string>
    <string name="reset_password">Forgot your password?</string>
    <string name="minimum_password">Password must have atleast 6 characters</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="pin_hint">PIN Code</string>
    <string name="phone_et">Enter phone number</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="enter_family_info">Enter Family Info</string>
    <string name="adults_hint">Number of adults</string>
    <string name="children_hint">Number of Children</string>
    <string name="submit">Submit</string>
    <string name="add_to_Cart">Add to cart</string>
    <string name="view_your_cart">Your Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="adults_no">Number of Adults</string>
    <string name="child_no">Number of Children</string>
    <string name="place_order">Proceed To Pay</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="take_away">Take Away</string>
    <string name="mode_of_delivery">Select mode of delivery</string>
    <string name="cancel">Cancel</string>
    <string name="order_placed">Order Placed</string>
    <string name="recent_order">Recent Orders</string>
</resources>
