<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_button_layout"
    android:layout_gravity="center">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/mode_of_delivery"
        android:background="@drawable/round_corners"
        app:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/home_del"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/ic_delivery"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_delivery"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/take_away"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/ic_shop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_away"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="1"
        android:background="@drawable/button_layout"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:layout_margin="12dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"/>

</LinearLayout>