<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorAccent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/enter_family_info"
            android:background="@drawable/round_corners" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            app:layout_constraintVertical_bias="0.136">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adults_hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adults_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/children_hint"
                    android:textColorHint="@android:color/darker_gray"
                    android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@android:color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/children_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLines="1"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_layout"
                    android:text="@string/submit"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>